welcome.lessons.welcome.bat.bool2.BlueTicket.scala.error
blueTicket:4: error: ')' expected but 'else' found.
  }else if((a+b==a+c+10) || (a+b==b+c+10)){
   ^